--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 26
+    //buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "in.theekathir.newsreader"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 26
         versionCode 01
         versionName "1.0"
     }
@@ -59,14 +59,14 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    api fileTree(include: ['*.jar'], dir: 'libs')
     //wearApp project(':wear')
-    compile 'com.android.support:appcompat-v7:23.3.+'
-    compile 'com.android.support:design:23.3.+'
-    compile 'com.google.android.gms:play-services-gcm:+'
-    //compile 'com.google.android.gms:play-services-wearable:+'
-    compile 'org.jsoup:jsoup:+'
-    compile 'com.github.bumptech.glide:glide:+'
-    compile 'com.amulyakhare:com.amulyakhare.textdrawable:+'
-    compile 'com.squareup.okhttp3:okhttp-urlconnection:+'
+    api 'com.android.support:appcompat-v7:23.3.+'
+    api 'com.android.support:design:23.3.+'
+    api 'com.google.android.gms:play-services-gcm:+'
+    //api 'com.google.android.gms:play-services-wearable:+'
+    api 'org.jsoup:jsoup:+'
+    api 'com.github.bumptech.glide:glide:+'
+    api 'com.amulyakhare:com.amulyakhare.textdrawable:+'
+    api 'com.squareup.okhttp3:okhttp-urlconnection:+'
 }
