--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     //buildToolsVersion "23.0.3"
 
     defaultConfig {
         applicationId "in.theekathir.newsreader"
         minSdkVersion 15
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 01
         versionName "1.0"
     }
@@ -18,8 +18,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 
     signingConfigs {
@@ -61,12 +61,13 @@ repositories {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     //wearApp project(':wear')
-    api 'com.android.support:appcompat-v7:23.3.+'
-    api 'com.android.support:design:23.3.+'
+    api 'com.android.support:appcompat-v7:28.0.0'
+    api 'com.android.support:support-v4:28.0.0'
+    api 'com.android.support:design:28.0.0'
     api 'com.google.android.gms:play-services-gcm:+'
     //api 'com.google.android.gms:play-services-wearable:+'
     api 'org.jsoup:jsoup:+'
     api 'com.github.bumptech.glide:glide:+'
     api 'com.amulyakhare:com.amulyakhare.textdrawable:+'
-    api 'com.squareup.okhttp3:okhttp-urlconnection:+'
+    api 'com.squareup.okhttp3:okhttp-urlconnection:3.13.0'
 }
